# Copyright (C) 2022 Nitrokey GmbH
# SPDX-License-Identifier: CC0-1.0

[package]
name = "vpicc"
version = "0.1.0"
authors = ["Nitrokey GmbH <info@nitrokey.com>", "Nehalenniæ Lilith Oudin <oudin@crans.org>"]
license = "MIT"
edition = "2021"
description = "interface for adding virtual smartcards using vsmartcard"
repository = "https://github.com/nitrokey/vpicc-rs"

[dependencies]
log = "0.4.14"

[dev-dependencies]
env_logger = "0.9.0"
